--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
   - npm install
 script:
   - npm run export-html
+  - npm run export-pdf
 deploy:
   provider: pages
   skip-cleanup: true
