--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "resume.json",
   "scripts": {
     "test": "./node_modules/.bin/resume test",
-    "export-html": "./node_modules/.bin/resume export index --format html --theme kwan"
+    "export-html": "./node_modules/.bin/resume export index --format html --theme kwan",
+    "export-pdf": "./node_modules/.bin/resume export mika-andrianarijaona --format pdf --theme kwan"
   },
   "repository": {
     "type": "git",
