fix: wrong file to commit

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -30,7 +30,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           if [ -n "$(git status --porcelain index.html)" ]; then
-            git add docs/index.html
+            git add index.html
             git commit -m "[ci skip] chore(index.html): update resume page"
             echo ::set-output name=exit_code::0
           else
