--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -5,6 +5,8 @@ name: Publish resume in JSONResume format as Github Page
 on:
   push:
     branches: [ master ]
+  schedule:
+    - cron: "0 0 1 * *"
 
 jobs:
   check_run:
